--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,8 +15,15 @@ body {
     #5226a5,
     #8600c0
   );
-  z-index: 1;
+  z-index: 0;
 }
+
+h1{
+  position: relative;
+  z-index: -2;
+  text-align: center;
+}
+
 
 .modal {
   position: absolute;
@@ -33,7 +40,7 @@ body {
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-  transition: all 500ms;
+
 }
 .modal::after {
   position: absolute;
@@ -43,17 +50,15 @@ body {
   height: 100vh;
   background-color: black;
   z-index: -1;
-  opacity: 0.4;
+  opacity: 0.6;
 }
-.modal.hidden {
-  opacity: 0;
-  z-index: -1;
-}
-.modal.hidden + .parent {
-  z-index: -1;
+.modal.hidden, .modal.hidden::after {
+  display: none;
+  position: none;
 }
 
-.parent {
+
+.ttt-area {
   display: grid;
   width: 45vh;
   margin: auto;
@@ -69,17 +74,17 @@ body {
   z-index: -2;
 }
 
-.parent div {
+.ttt-area div {
   background-color: hsl(174, 100%, 85%);
   height: 15vh;
   border-radius: 4px;
   transition: background 500ms;
 }
 
-.parent .clickedA {
+.ttt-area .clickedA {
   background-color: rgb(196, 42, 188);
 }
 
-.parent .clickedB {
+.ttt-area .clickedB {
   background-color: rgb(31, 136, 197);
 }
