--- a/stylesheet.css
+++ b/stylesheet.css
@@ -19,16 +19,18 @@ body {
 }
 
 h1{
-  position: relative;
-  z-index: -2;
+  z-index: 0;
+  display: block;
+  margin: 0;
   text-align: center;
 }
 
 
 .modal {
   position: absolute;
-  left: calc(50vw - 150px);
-  top: calc(50vh - 50px);
+  left: 50vw;
+  top: 50vh;
+  transform: translate(-50%, -50%);
   width: 300px;
   height: 100px;
   border-radius: 5px;
@@ -40,21 +42,22 @@ h1{
   flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
-
+  z-index: 2;
+  transition: background 1000ms;
 }
-.modal::after {
-  position: absolute;
-  display: block;
-  content: "";
+.layer{
   width: 100vw;
   height: 100vh;
-  background-color: black;
-  z-index: -1;
-  opacity: 0.6;
+  position: absolute;
+  backdrop-filter: blur(4px);
+  transition: backdrop-filter 1000ms;
+  z-index: 1;
+
 }
-.modal.hidden, .modal.hidden::after {
-  display: none;
-  position: none;
+.modal.hidden, .modal.hidden + .layer {
+  background-color: transparent;
+  backdrop-filter: none;
+  z-index: -1;
 }
 
 
@@ -71,7 +74,7 @@ h1{
   left: 50%;
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
-  z-index: -2;
+  z-index: 0;
 }
 
 .ttt-area div {
