--- a/stylesheet.css
+++ b/stylesheet.css
@@ -15,13 +15,10 @@ body {
     #5226a5,
     #8600c0
   );
-  z-index: 0;
+  z-index: 1;
 }
 
 h1{
-  z-index: 0;
-  display: block;
-  margin: 0;
   text-align: center;
 }
 
@@ -43,14 +40,16 @@ h1{
   justify-content: space-evenly;
   align-items: center;
   z-index: 2;
-  transition: background 1000ms;
+  transition-property: background-color, color, z-index;
+  transition-duration: 200ms;
+  transition-timing-function: ease;
 }
 .layer{
   width: 100vw;
   height: 100vh;
   position: absolute;
   backdrop-filter: blur(4px);
-  transition: backdrop-filter 1000ms;
+  transition: all 200ms;
   z-index: 1;
 
 }
@@ -58,6 +57,7 @@ h1{
   background-color: transparent;
   backdrop-filter: none;
   z-index: -1;
+  color: rgba(255, 255, 255, 0);
 }
 
 
@@ -84,10 +84,10 @@ h1{
   transition: background 500ms;
 }
 
-.ttt-area .clickedA {
-  background-color: rgb(196, 42, 188);
+.ttt-area .a {
+  background-color: hsl(303, 65%, 47%);
 }
 
-.ttt-area .clickedB {
-  background-color: rgb(31, 136, 197);
+.ttt-area .b {
+  background-color: hsl(202, 73%, 45%);
 }
